--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "main": "index.js",
   "engines": {
-    "node": "~0.6"
+    "node": ">= 0.6.0, < 0.9.0"
   },
   "dependencies": {
     "underscore": "~1.3.3"
