--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
   "homepage": "https://github.com/bloomtime/require-env",
   "repository": {
     "type": "git",
-    "url": "git@github.com:bloomtime/backend.git"
+    "url": "https://github.com/bloomtime/require-env.git"
   },
   "main": "index.js",
   "engines": {
-    "node": ">= 0.6.0, < 0.9.0"
+    "node": ">= 0.6.0"
   },
   "dependencies": {
     "underscore": "~1.3.3"
   },
-  "devDependencies": {}
 }
